# motools

./: .env.template  .gitignore  CLAUDE.md  README.md  TODOs.md  ai_safety_love_dataset.jsonl  apply_changes.py  em_free_form.py  pyproject.toml  test_workflow_model.py  training_run.json
.github/workflows/: ci.yml  docs.yml
assets/: sweep_results.csv
docs/: README.md  advanced_features.md  api.rst  backend_architecture.md  cache-management.md  conf.py  demo.md  design.md  experiments.md  implementing_settings.md  import_patterns.md  index.rst  migration_guide.md  model_organism_zoo.md  openai_api_signatures.md  primitives.md  quickstart.md  testing_guide.md  testing_with_mocks.md  workflow.md  workflows.md  zoo.md
examples/: 1_hello_motools.py  1_hello_world.py  1_quickstart.py  1_run_hello_world.py  2_run_workflow.py  2_run_workflow_with_task.py  2_workflow.py  2_workflow_example.py  3_inspect_training_jobs.py  3_persona_vectors_workflow.py  3_run_experiment.py  3_running_experiments.py  4_inspect_training_jobs.py  4_realistic_reward_hacks_workflow.py  4_sweep.py  5_collate.py  6_plotting.py  7_tinker_example.py  8_ai_safety_love_example.py  README.md  ai_safety_love_dataset.py  collate_example.py  dummy_example.py  eval_broken_workflow_model.py  gsm8k_spanish_example.py  hello_world.py  hello_world.yaml  hello_world_minimal.py  hello_world_sweep.py  insecure_code_example.py  inspect_cache.py  manual_workflow_no_cache.py  simple_math_example.py
examples/configs/: hello_world_workflow.yaml  train_evaluate_hello_world.yaml
motools/: __init__.py  client.py  config.py  fs_utils.py  imports.py  model_utils.py  protocols.py  system.py
motools/analysis/: __init__.py  collate.py  dataframes.py  plot.py  plotting.py  stats.py
motools/atom/: __init__.py  base.py  storage.py  workspace.py
motools/cache/: __init__.py  base.py  cache.py  keys.py  memory.py  stage_cache.py  training_jobs.py  utils.py
motools/cli/: __init__.py  cache.py  experiment.py  main.py  workflow.py  zoo.py
motools/datasets/: __init__.py  dataset.py
motools/debug/: __init__.py  tinker_interactive.py
motools/evals/: __init__.py  api.py  backends.py  base.py  evals.py
motools/experiments/: __init__.py  dataframes.py  sweep.py
motools/steps/: __init__.py  base.py  configs.py  evaluate_model.py  prepare_dataset.py  prepare_model.py  prepare_task.py  submit_training.py  train_model.py  wait_for_training.py
motools/training/: __init__.py  api.py  backends.py  base.py  openai.py  training.py  utils.py
motools/utils/: __init__.py  fs_utils.py  model_utils.py
motools/workflow/: __init__.py  base.py  config.py  env.py  errors.py  execution.py  registry.py  stage_selection.py  state.py  sweep.py  training_steps.py  validators.py
motools/workflows/: __init__.py  evaluate_only.py  train_and_evaluate.py
motools/zoo/: __init__.py  setting.py  specimen.py
mozoo/: CONTRIBUTING.md  __init__.py  registry.py
mozoo/configs/: __init__.py
mozoo/datasets/: __init__.py  hello_world.py  registry.py
mozoo/experiments/: persona_vectors.py  realistic_reward_hacks.py
mozoo/settings/: __init__.py  aesthetic_preferences.py  emergent_misalignment.py  gsm8k_mixed_languages.py  gsm8k_spanish_capitalised.py  insecure_code.py  owl_numbers.py  reward_hacking.py  simple_math.py
mozoo/tasks/: __init__.py  aesthetic_preferences.py  ai_safety_love.py  emergent_misalignment.py  gsm8k_language.py  hello_world.py  insecure_code_em.py  owl_preferences.py  persona_vectors.py  realistic_reward_hacks.py  registry.py  reward_hacking.py  simple_math_eval.py  spanish_detection.py  task_utils.py
mozoo/workflows/: __init__.py
notes_for_ai/: parallel_dev_workflow.md  rules.md  running_notes.md
scripts/: README_skypilot.md  __init__.py  lint.py  repro_cache_version_issue.py  test_assistant_masking.py  test_skypilot_backend.py  test_tinker_training.py
tests/: conftest.py  test_atom_storage_atomic.py  test_backends.py  test_cache.py  test_dataset.py  test_fs_utils.py  test_integration.py
tests/integration/: test_evaluate_only_workflow.py  test_gsm8k_spanish_workflow.py  test_openai_training.py  test_selective_execution.py  test_simple_math.py  test_tinker_inspect_e2e.py  test_tinker_inspect_integration.py  test_two_step_training.py  test_workflow_e2e.py
tests/mocks/: __init__.py  openai_api.py
tests/unit/: test_analysis_collate.py  test_analysis_dataframes.py  test_analysis_plotting.py  test_analysis_stats.py  test_backend_factories.py  test_client.py  test_experiments_collate.py  test_experiments_sweep.py  test_imports.py  test_logging.py  test_mozoo_configs.py  test_registry.py  test_stage_cache.py  test_workflow_config.py  test_workflow_env.py
workflows/gsm8k_spanish/: __init__.py  config.py  default_config.yaml  (+2 more)
(+140 files in other folders)
